<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manual_walk</name>
  <version>0.0.0</version>
  <description>This package should allow the robot to walk.</description>
  <maintainer email="you@todo.todo">You</maintainer>
  <license>EUPL-1.2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>states</depend>

  <build_depend>rclcpp</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
