<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>points_and_functions</name>
  <version>0.0.0</version>
  <description>Just set the robots legs at a specific distance.</description>
  <maintainer email="you@todo.todo">You</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>smov_states</depend>
  <depend>smov_trigonometry</depend>

  <build_depend>rclcpp</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
